manifests/apps/ui/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windy-journey-ui
  labels:
    app: windy-journey-ui
    app.kubernetes.io/part-of: windy-journey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: windy-journey-ui
      app.kubernetes.io/part-of: windy-journey
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: windy-journey-ui
        app.kubernetes.io/part-of: windy-journey
    spec:
      automountServiceAccountToken: true
      containers:
        - name: windy-journey-ui
          image: quay.io/wvi/ui-frontend:1.2.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /opt/app-root/src/assets/assets/env
              name: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: windy-journey-ui
      serviceAccountName: windy-journey-ui
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: windy-journey-ui-config
          name: config
