manifests/apps/ui/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windy-journey-ui
  namespace: windy-journey-ui
  labels:
    app: windy-journey-ui
    app.kubernetes.io/part-of: windy-journey
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: web
      protocol: TCP
      port: 8088
      targetPort: 8088
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: windy-journey-ui
